# pll-to-cpp

./: CMakeLists.txt  README.md  clean_pll_loop.cpp  clean_pll_loop.py  clean_pll_loop_GNUPLOT.cpp  clean_pll_loop_GNUPLOT_animated.cpp  esportazione.csv  gnuplot.h  main  plot_gnuplot.gp  plot_gnuplot.txt
.github/workflows/: c-cpp.yml
csv_esportati/: esportazione.csv  esportazione2.csv  esportazione_python.csv
deprecato/: clean_pll_loop_GNUPLOT.cpp  clean_pll_loop_old.cpp
deprecato/prove/: indexError.cpp  prova.py
prove/: prova.cpp
